DEV: Update linting

--- a/assets/javascripts/discourse/components/activity-pub-authorization.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-authorization.hbs
@@ -3,7 +3,8 @@
     href={{@authorization.actor_id}}
     class="activity-pub-authorization-link btn"
     target="_blank"
-    rel="noopener noreferrer">
+    rel="noopener noreferrer"
+  >
     {{d-icon "external-link-alt"}}
     {{@authorization.actor_id}}
   </a>
