--- a/assets/javascripts/discourse/templates/activity-pub-category.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-category.hbs
@@ -10,6 +10,9 @@
   <ActivityPubCategoryBanner @category={{this.model}} />
 {{/if}}
 
-<ActivityPubCategoryNav @category={{this.model}} @follow={{route-action "follow"}} />
+<ActivityPubCategoryNav
+  @category={{this.model}}
+  @follow={{route-action "follow"}}
+/>
 
 {{outlet}}
