--- a/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/preferences/activity-pub.hbs
@@ -5,16 +5,18 @@
 {{#if hasAuthorizations}}
   <div class="activity-pub-authorizations">
     <h4>{{i18n "user.discourse_activity_pub.authorizations.title"}}</h4>
-    <label>{{i18n "user.discourse_activity_pub.authorizations.description"}}</label>
+    <label>{{i18n
+        "user.discourse_activity_pub.authorizations.description"
+      }}</label>
     <ul>
-    {{#each authorizations as |authorization|}}
-      <li>
-        <ActivityPubAuthorization
-          @authorization={{authorization}}
-          @remove={{action "removeAuthorization"}}
+      {{#each authorizations as |authorization|}}
+        <li>
+          <ActivityPubAuthorization
+            @authorization={{authorization}}
+            @remove={{action "removeAuthorization"}}
           />
-      </li>
-    {{/each}}
+        </li>
+      {{/each}}
     </ul>
   </div>
 {{/if}}
