--- a/assets/javascripts/discourse/components/activity-pub-nav-item.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-nav-item.hbs
@@ -2,13 +2,16 @@
   <a
     class={{this.classes}}
     href={{this.href}}
-    title={{i18n 'discourse_activity_pub.category_nav.description' category_name=@category.name}}
+    title={{i18n
+      "discourse_activity_pub.category_nav.description"
+      category_name=@category.name
+    }}
     {{did-insert this.subscribe}}
     {{did-insert this.didChangeCategory}}
     {{did-update this.didChangeCategory @category}}
     {{will-destroy this.unsubscribe}}
-    >
+  >
     {{d-icon "discourse-activity-pub"}}
-    {{i18n 'discourse_activity_pub.category_nav.label'}}
+    {{i18n "discourse_activity_pub.category_nav.label"}}
   </a>
 {{/if}}
