DEV: Update linting

--- a/assets/javascripts/discourse/components/activity-pub-authorization.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-authorization.hbs
@@ -9,10 +9,10 @@
     {{@authorization.actor_id}}
   </a>
   <DButton
-    @id="user_activity_pub_authorize_remove_authorization"
-    @class="activity-pub-authorize-remove-authorization"
     @icon="times"
     @action={{action "remove"}}
     @title="user.discourse_activity_pub.remove_authorization_button.title"
+    id="user_activity_pub_authorize_remove_authorization"
+    class="activity-pub-authorize-remove-authorization"
   />
 </div>
