--- a/assets/javascripts/discourse/components/activity-pub-authorize.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-authorize.hbs
@@ -8,36 +8,36 @@
       <span class="activity-pub-authorize-verified-domain">
         <a class="btn">{{this.domain}}</a>
         <DButton
-          @id="user_activity_pub_authorize_clear_domain"
-          @class="activity-pub-authorize-clear-domain"
           @icon="times"
           @action={{action "clearDomain"}}
           @title="user.discourse_activity_pub.clear_domain_button.title"
+          id="user_activity_pub_authorize_clear_domain"
+          class="activity-pub-authorize-clear-domain"
         />
       </span>
       <DButton
-        @id="user_activity_pub_authorize_authorize_domain"
-        @class="activity-pub-authorize-domain"
         @icon="fingerprint"
         @action={{action "authorizeDomain"}}
         @label="user.discourse_activity_pub.authorize_button.label"
         @title="user.discourse_activity_pub.authorize_button.title"
+        id="user_activity_pub_authorize_authorize_domain"
+        class="activity-pub-authorize-domain"
       />
     {{else}}
       <Input
-        id="user_activity_pub_authorize_domain"
         @value={{this.domain}}
         disabled={{this.verifyingDomain}}
         placeholder={{i18n "user.discourse_activity_pub.authorize.placeholder"}}
+        id="user_activity_pub_authorize_domain"
       />
       <DButton
-        @id="user_activity_pub_authorize_verify_domain"
-        @class="activity-pub-authorize-verify-domain"
         @icon="check"
         @action={{action "verifyDomain"}}
         @label="user.discourse_activity_pub.verify_domain_button.label"
         @title="user.discourse_activity_pub.verify_domain_button.title"
         @disabled={{this.verifyingDomain}}
+        id="user_activity_pub_authorize_verify_domain"
+        class="activity-pub-authorize-verify-domain"
       />
     {{/if}}
   </div>
