Fixes and tests

--- a/assets/javascripts/discourse/templates/admin-activity-pub-actor.hbs
+++ b/assets/javascripts/discourse/templates/admin-activity-pub-actor.hbs
@@ -46,6 +46,7 @@
                 @label="admin.discourse_activity_pub.actor.edit.label"
                 @title="admin.discourse_activity_pub.actor.edit.title"
                 @icon="pencil-alt"
+                class="activity-pub-actor-edit-btn"
               />
             </div>
           </div>
