--- a/assets/javascripts/discourse/templates/admin-activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/admin-activity-pub.hbs
@@ -3,10 +3,7 @@
     <span>{{i18n "admin.discourse_activity_pub.actor.category.label"}}</span>
   </DNavigationItem>
   <li class="activity-pub-add-actor">
-    <LinkTo
-      @route="adminActivityPubActorShow"
-      @model={{this.newActor}}
-    >
+    <LinkTo @route="adminActivityPubActorShow" @model={{this.newActor}}>
       {{d-icon "plus"}}
       <span>{{i18n "admin.discourse_activity_pub.actor.add.label"}}</span>
     </LinkTo>
