--- a/assets/javascripts/discourse/templates/admin-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-activity-pub-actor-show.hbs
@@ -17,7 +17,7 @@
           }}
         />
 
-        {{#if (eq this.actor.model_type 'category')}}
+        {{#if (eq this.actor.model_type "category")}}
           <ActivityPubCategoryChooser
             @value={{this.categoryId}}
             @onChange={{action "changeCategoryId"}}
@@ -29,11 +29,11 @@
         {{/if}}
       </div>
     {{else}}
-    <ActivityPubActorModel
-        @actor={{this.actor}} />
+      <ActivityPubActorModel @actor={{this.actor}} />
       <ActivityPubStatus
         @model={{this.actor.model}}
-        @modelType={{this.actor.model_type}} />
+        @modelType={{this.actor.model_type}}
+      />
       <div class="activity-pub-actor-enabled-toggle">
         <DToggleSwitch
           @state={{this.enabled}}
@@ -65,7 +65,9 @@
                 id="activity-pub-username"
                 @value={{this.actor.username}}
               />
-              <span class="activity-pub-host">@{{this.site.activity_pub_host}}</span>
+              <span
+                class="activity-pub-host"
+              >@{{this.site.activity_pub_host}}</span>
             </div>
             <div class="activity-pub-actor-setting-notice">
               <span>{{d-icon "exclamation-triangle"}}{{i18n
@@ -79,60 +81,63 @@
           <label for="activity-pub-name">{{i18n
               "admin.discourse_activity_pub.actor.name"
             }}</label>
-          <Input
-            id="activity-pub-name"
-            @value={{this.actor.name}}
-          />
+          <Input id="activity-pub-name" @value={{this.actor.name}} />
           <div class="activity-pub-actor-setting-description">
             {{i18n "admin.discourse_activity_pub.actor.name_description"}}
           </div>
         </section>
 
         {{#if this.site.activity_pub_publishing_enabled}}
-          <section class="activity-pub-actor-setting activity-pub-default-visibility">
+          <section
+            class="activity-pub-actor-setting activity-pub-default-visibility"
+          >
             <label for="activity-pub-default-visibility">{{i18n
                 "admin.discourse_activity_pub.actor.default_visibility"
               }}</label>
             <ActivityPubVisibilityDropdown
               @value={{this.actor.default_visibility}}
-              @onChange={{action
-                (mut this.actor.default_visibility)
-              }}
+              @onChange={{action (mut this.actor.default_visibility)}}
               @publicationType={{this.actor.publication_type}}
               @objectType={{this.actor.post_object_type}}
             />
             <div class="activity-pub-actor-setting-description">
-              {{i18n "admin.discourse_activity_pub.actor.default_visibility_description"}}
+              {{i18n
+                "admin.discourse_activity_pub.actor.default_visibility_description"
+              }}
             </div>
           </section>
 
-          <section class="activity-pub-actor-setting activity-pub-post-object-type">
+          <section
+            class="activity-pub-actor-setting activity-pub-post-object-type"
+          >
             <label for="activity-pub-post-object-type">{{i18n
                 "admin.discourse_activity_pub.actor.post_object_type"
               }}</label>
             <ActivityPubPostObjectTypeDropdown
               @value={{this.actor.post_object_type}}
-              @onChange={{action
-                (mut this.actor.post_object_type)
-              }}
+              @onChange={{action (mut this.actor.post_object_type)}}
             />
             <div class="activity-pub-actor-setting-description">
-              {{i18n "admin.discourse_activity_pub.actor.post_object_type_description"}}
+              {{i18n
+                "admin.discourse_activity_pub.actor.post_object_type_description"
+              }}
             </div>
           </section>
 
-          <section class="activity-pub-actor-setting activity-pub-publication-type">
+          <section
+            class="activity-pub-actor-setting activity-pub-publication-type"
+          >
             <label for="activity-pub-post-object-type">{{i18n
                 "admin.discourse_activity_pub.actor.publication_type"
               }}</label>
             <ActivityPubPublicationTypeDropdown
               @value={{this.actor.publication_type}}
-              @onChange={{action
-                (mut this.actor.publication_type)
-              }}
+              @onChange={{action (mut this.actor.publication_type)}}
             />
             <div class="activity-pub-actor-setting-description">
-              {{i18n "admin.discourse_activity_pub.actor.publication_type_description"}}
+              {{i18n
+                "admin.discourse_activity_pub.actor.publication_type_description"
+              }}
             </div>
           </section>
         {{/if}}
@@ -140,22 +145,21 @@
     </div>
 
     <div class="activity-pub-actor-form-extra">
-      {{#if
-        (and
-          this.showForm
-          this.siteSettings.login_required
-        )
-      }}
-        <section class="activity-pub-actor-setting-extra activity-pub-site-settings">
+      {{#if (and this.showForm this.siteSettings.login_required)}}
+        <section
+          class="activity-pub-actor-setting-extra activity-pub-site-settings"
+        >
           <div class="activity-pub-site-setting-title">
             {{i18n "admin.discourse_activity_pub.actor.site_setting.title"}}
           </div>
           <ActivityPubSiteSettingNotice
             @setting="activity_pub_enabled"
-            @modelType={{this.actor.model_type}} />
+            @modelType={{this.actor.model_type}}
+          />
           <ActivityPubSiteSettingNotice
             @setting="login_required"
-            @modelType={{this.actor.model_type}} />
+            @modelType={{this.actor.model_type}}
+          />
         </section>
       {{/if}}
     </div>
@@ -176,7 +180,7 @@
         </span>
       {{/if}}
       <DButton
-        @action={{action 'saveActor'}}
+        @action={{action "saveActor"}}
         @label="admin.discourse_activity_pub.actor.save.label"
         @title="admin.discourse_activity_pub.actor.save.title"
         @class="activity-pub-save-actor btn-primary"
