--- a/assets/javascripts/discourse/templates/activity-pub-actor-follows.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-actor-follows.hbs
@@ -3,7 +3,7 @@
   @action={{action "loadMore"}}
   class="activity-pub-follows-container"
 >
-  {{#if this.model.hasActors}}
+  {{#if this.hasActors}}
     <ResponsiveTable @className="activity-pub-follow-table follows">
       <:header>
         <TableHeaderToggle
@@ -32,7 +32,7 @@
         ></th>
       </:header>
       <:body>
-        {{#each this.model.actors as |actor|}}
+        {{#each this.actors as |actor|}}
           <div class="directory-table__row activity-pub-follow-table-row">
             <div class="directory-table__cell activity-pub-follow-table-actor">
               <ActivityPubActor @actor={{actor}} />
@@ -61,7 +61,7 @@
               class="directory-table__cell activity-pub-follow-table-actions"
             >
               <ActivityPubFollowBtn
-                @actor={{this.model.category.activity_pub_actor}}
+                @actor={{this.actor}}
                 @followedActor={{actor}}
                 @unfollow={{route-action "unfollow"}}
                 @type="actor_unfollow"
