--- a/assets/javascripts/discourse/templates/activity-pub-actor.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-actor.hbs
@@ -1,17 +1,17 @@
 <Discovery::Navigation
   @createTopic={{fn
     this.composer.openNewTopic
-    (hash category=this.model preferDraft=true)
+    (hash category=this.category preferDraft=true)
   }}
-  @category={{this.model}}
+  @category={{this.category}}
 />
 
 {{#if this.site.activity_pub_publishing_enabled}}
-  <ActivityPubCategoryBanner @category={{this.model}} />
+  <ActivityPubBanner @actor={{this.actor}} />
 {{/if}}
 
-<ActivityPubCategoryNav
-  @category={{this.model}}
+<ActivityPubNav
+  @actor={{this.actor}}
   @follow={{route-action "follow"}}
 />
 
