First working version of tag actors

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -311,7 +311,7 @@ body.user-preferences-activity-pub-page {
   }
 }
 
-.activity-pub-category-nav {
+.activity-pub-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
