--- a/assets/javascripts/discourse/templates/activity-pub-actor.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-actor.hbs
@@ -1,9 +1,8 @@
 <Discovery::Navigation
-  @createTopic={{fn
-    this.composer.openNewTopic
-    (hash category=this.category preferDraft=true)
-  }}
+  @createTopic={{this.createTopic}}
+  @canCreateTopicOnTag={{this.canCreateTopicOnTag}}
   @category={{this.category}}
+  @tag={{this.tag}}
 />
 
 {{#if this.site.activity_pub_publishing_enabled}}
