--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -27,6 +27,12 @@
             }}
           />
         {{/if}}
+        {{#if (eq this.actor.model_type "tag")}}
+          <ActivityPubTagChooser
+            @tagId={{this.tag}}
+            @onChange={{action "changeTag"}}
+          />
+        {{/if}}
       </div>
     {{else}}
       <ActivityPubActorModel @actor={{this.actor}} />
@@ -132,6 +138,7 @@
               }}</label>
             <ActivityPubPublicationTypeDropdown
               @value={{this.actor.publication_type}}
+              @modelType={{this.actor.model_type}}
               @onChange={{action (mut this.actor.publication_type)}}
             />
             <div class="activity-pub-actor-setting-description">
@@ -175,7 +182,7 @@
             {{i18n "admin.discourse_activity_pub.actor.save.success"}}
           {{else}}
             {{d-icon "times"}}
-            {{i18n "admin.discourse_activity_pub.actor.save.fail"}}
+            {{i18n "admin.discourse_activity_pub.actor.save.failed"}}
           {{/if}}
         </span>
       {{/if}}
