--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor-show.hbs
@@ -31,6 +31,9 @@
           <ActivityPubTagChooser
             @tagId={{this.tag}}
             @onChange={{action "changeTag"}}
+            @options={{hash
+              hasActor=false
+            }}
           />
         {{/if}}
       </div>
