Move to admin plugins parent route

--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub.hbs
@@ -1,9 +1,12 @@
 {{#admin-nav}}
-  <DNavigationItem @route="adminActivityPubActor">
+  <DNavigationItem @route="adminPlugins.activityPub.actor">
     <span>{{i18n "admin.discourse_activity_pub.actor.category.label"}}</span>
   </DNavigationItem>
   <li class="activity-pub-add-actor">
-    <LinkTo @route="adminActivityPubActorShow" @model={{this.newActor}}>
+    <LinkTo
+      @route="adminPlugins.activityPub.actorShow"
+      @model={{this.newActor}}
+    >
       {{d-icon "plus"}}
       <span>{{i18n "admin.discourse_activity_pub.actor.add.label"}}</span>
     </LinkTo>
